<resources>
    <string name="app_name">Github API Demo</string>
    <string name="title_activity_list_user">ListUserActivity</string>
    <string name="followers">%d followers</string>
    <string name="txt_repositories">Repositories</string>
    <string name="txt_followers">Followers</string>
    <string name="txt_following">Following</string>
    <string name="language">Language: %s</string>
    <string name="txt_search_repo">Search Repository</string>
    <string name="txt_search_user">Search User</string>
    <string name="txt_list_of_user">List of User</string>

    <string name="txt_bio">
        %s\n%s\n%s
    </string>
    <string name="txt_user_detail">User Detail</string>
</resources>