<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/action_list">

    <fragment
        android:id="@+id/action_list"
        android:name="com.dias.githubapidemo.ui.listuser.ListUserFragment"
        android:label="@string/txt_list_of_user"
        tools:layout="@layout/fragment_list_user"/>
    <fragment
        android:id="@+id/action_search_repo"
        android:name="com.dias.githubapidemo.ui.searchrepo.SearchRepoFragment"
        android:label="@string/txt_search_repo"
        tools:layout="@layout/fragment_search_repo" />

    <fragment
        android:id="@+id/action_search_user"
        android:name="com.dias.githubapidemo.ui.searchuser.SearchUserFragment"
        android:label="@string/txt_search_user"
        tools:layout="@layout/fragment_search_user" />
</navigation>